<resources>
    <!-- Activity Titles -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_registration">Menu</string>

    <string name="app_name">Final Year Project</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="remember">Remember Me</string>

    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="trips_fragment_label">Trips</string>
    <string name="map_fragment_label">Map</string>
    <string name="contacts_fragment_label">Contacts</string>
    <string name="emergency_fragment_label">Emergency Services</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="other">Other</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_contacts">SelectContactsActivity</string>
</resources>