<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_fragment_label" />

        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_trips"
            android:title="@string/trips_fragment_label" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map_fragment_label" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts_fragment_label" />

        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_emergency"
            android:title="@string/emergency_fragment_label" />
    </group>

    <item
        android:checkableBehavior="single"
        android:gravity="bottom"
        android:title="@string/other">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings_fragment_label" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_home"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>